samples/_failures_safe/1761653360_6f99e0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_256966e5.c: In function ‘main’:
./samples/SAFE/__tmp_256966e5.c:175:12: error: expected declaration or statement at end of input
  175 |     struct Token token;
      |            ^~~~~
